--- a/package.json
+++ b/package.json
@@ -5,7 +5,27 @@
     "build": "nuxt build",
     "start": "node .output/server/index.mjs"
   },
+  "dependencies": {
+    "node-sass": "^4.14.1",
+    "sass": "^1.43.2",
+    "sass-loader": "^10.1.1"
+  },
   "devDependencies": {
-    "nuxt3": "latest"
+    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/stylelint-module": "^4.0.0",
+    "autoprefixer": "^10.3.7",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.19.1",
+    "nuxt3": "^3.0.0-27238235.a1bcc53",
+    "postcss": "^8.3.9",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^22.0.0",
+    "tailwind-config-viewer": "^1.6.2",
+    "tailwindcss": "^2.2.17"
   }
 }
