--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "lint:ts": "eslint --ext .ts,vue --ignore-path .gitignore .",
+    "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
+    "lint": "npm run lint:ts && npm run lint:style",
+    "lint:fix": "eslint --fix --ext .ts,vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "node-sass": "^4.14.1",
@@ -11,21 +15,25 @@
     "sass-loader": "^10.1.1"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "autoprefixer": "^10.3.7",
-    "eslint": "^8.0.1",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.2.1",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.19.1",
     "nuxt3": "^3.0.0-27238235.a1bcc53",
     "postcss": "^8.3.9",
+    "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^22.0.0",
     "tailwind-config-viewer": "^1.6.2",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.17",
+    "typescript": "^4.4.4"
   }
 }
