--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint --fix --ext .ts,vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.4",
     "node-sass": "^4.14.1",
     "sass": "^1.43.2",
     "sass-loader": "^10.1.1"
